crates/core/src/change/snapshots/mix_core__change__tests__a_failed_activation_puts_both_files_back.snap
---
source: crates/core/src/change/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-config",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": true,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-config",
        "subject": "/home/mix-user/.local/state/mix/home.nix",
        "undone": true,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_ACTIVATE_PROFILE",
        "status": "STATUS_FAILED",
        "step": "activate",
        "subject": "mix-user's profile",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "install",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [
      {
        "causes": [],
        "code": "CODE_COMMAND_FAILED",
        "command": {
          "command": "nix build",
          "exitStatus": 1,
          "outputTail": "error: attribute missing"
        },
        "detail": "nix build failed",
        "help": [
          "run the command again with `-v` to see the program's own output"
        ],
        "subject": "nix build",
        "title": "A program `mix` ran, such as `nix` or `git`, exited with an error",
        "type": "urn:mix:problem:command-failed"
      }
    ],
    "request": "request",
    "status": "STATUS_FAILED",
    "steps": [
      {
        "key": "write-config",
        "status": "STATUS_SUCCEEDED",
        "subject": "package list",
        "undone": true,
        "verb": "VERB_WRITING"
      },
      {
        "key": "activate",
        "status": "STATUS_FAILED",
        "subject": "doesnotexistinnixpkgs",
        "undone": false,
        "verb": "VERB_INSTALLING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {},
  "performed": [
    "PutFile /home/mix-user/.local/state/mix/state",
    "PutFile /home/mix-user/.local/state/mix/home.nix",
    "ActivateProfile mix-user's profile",
    "Restore /home/mix-user/.local/state/mix/home.nix",
    "Restore /home/mix-user/.local/state/mix/state"
  ]
}
