crates/core/src/change/snapshots/mix_core__change__tests__a_remove_over_a_broken_list_restores_it_and_drops_the_package.snap
---
source: crates/core/src/change/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-config",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_ACTIVATE_PROFILE",
        "status": "STATUS_SUCCEEDED",
        "step": "activate",
        "subject": "mix-user's profile",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_RECORD_STATE",
        "status": "STATUS_SUCCEEDED",
        "step": "record",
        "subject": "mix-user's package list",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "remove",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_SUCCEEDED",
    "steps": [
      {
        "key": "write-config",
        "status": "STATUS_SUCCEEDED",
        "subject": "package list",
        "undone": false,
        "verb": "VERB_WRITING"
      },
      {
        "key": "activate",
        "status": "STATUS_SUCCEEDED",
        "subject": "fd",
        "undone": false,
        "verb": "VERB_INSTALLING"
      },
      {
        "key": "record",
        "status": "STATUS_SUCCEEDED",
        "subject": "change",
        "undone": false,
        "verb": "VERB_RECORDING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {
    "files": {
      "/home/mix-user/.local/state/mix/state": {
        "contents": [
          "-{broken",
          "+{",
          "+  \"version\": 1,",
          "+  \"packages\": [",
          "+    \"git\"",
          "+  ]",
          "+}"
        ]
      }
    },
    "repositories": {
      "/home/mix-user/.local/state/mix/.git": {
        "after": {
          "records": {
            ".gitignore": "as on disk",
            "flake.lock": "as on disk",
            "flake.nix": "as on disk",
            "home.nix": "as on disk",
            "state": "as on disk"
          },
          "verifies": true
        },
        "before": {
          "records": {
            ".gitignore": "as on disk",
            "flake.lock": "as on disk",
            "flake.nix": "as on disk",
            "home.nix": "as on disk",
            "state": "older"
          },
          "verifies": true
        }
      }
    }
  },
  "performed": [
    "PutFile /home/mix-user/.local/state/mix/state",
    "ActivateProfile mix-user's profile",
    "RecordState mix-user's package list",
    "Commit changes"
  ]
}
