crates/core/src/change/snapshots/mix_core__change__tests__an_install_over_a_broken_list_restores_it_and_adds_the_package.snap
---
source: crates/core/src/change/tests.rs
expression: "run.case(&before, &world)"
---
{
  "document": {
    "cancellation": "CANCELLATION_UNSPECIFIED",
    "changes": [
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-config",
        "subject": "/home/mix-user/.local/state/mix/state",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_PUT_FILE",
        "status": "STATUS_SUCCEEDED",
        "step": "write-config",
        "subject": "/home/mix-user/.local/state/mix/home.nix",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_ACTIVATE_PROFILE",
        "status": "STATUS_SUCCEEDED",
        "step": "activate",
        "subject": "mix-user's profile",
        "undone": false,
        "unknown": []
      },
      {
        "action": "CHANGE_ACTION_UPDATE",
        "operation": "OPERATION_RECORD_STATE",
        "status": "STATUS_SUCCEEDED",
        "step": "record",
        "subject": "mix-user's package list",
        "undone": false,
        "unknown": []
      }
    ],
    "command": "install",
    "dryRun": false,
    "exit": 0,
    "formatVersion": "1.0",
    "problems": [],
    "request": "request",
    "status": "STATUS_SUCCEEDED",
    "steps": [
      {
        "key": "write-config",
        "status": "STATUS_SUCCEEDED",
        "subject": "package list",
        "undone": false,
        "verb": "VERB_WRITING"
      },
      {
        "key": "activate",
        "status": "STATUS_SUCCEEDED",
        "subject": "ripgrep",
        "undone": false,
        "verb": "VERB_INSTALLING"
      },
      {
        "key": "record",
        "status": "STATUS_SUCCEEDED",
        "subject": "change",
        "undone": false,
        "verb": "VERB_RECORDING"
      }
    ],
    "waits": [],
    "warnings": []
  },
  "machine": {
    "files": {
      "/home/mix-user/.local/state/mix/home.nix": {
        "contents": [
          " # Code generated by mix. DO NOT EDIT.",
          " # Manual changes will be overwritten. Use `mix` commands to manage this configuration.",
          " ",
          " { pkgs, ... }: {",
          "   home = {",
          "     extraBuilderCommands = \"cp ${./state} $out/mix-state",
          " cp ${./flake.nix} $out/mix-flake.nix",
          " cp ${./flake.lock} $out/mix-flake.lock",
          " cp ${./home.nix} $out/mix-home.nix\";",
          "     homeDirectory = \"/home/mix-user\";",
          "     packages = [",
          "+      pkgs.fd",
          "       pkgs.git",
          "+      pkgs.ripgrep",
          "     ];",
          "     stateVersion = \"24.05\";",
          "     username = \"mix-user\";",
          "   };",
          " }"
        ]
      },
      "/home/mix-user/.local/state/mix/state": {
        "contents": [
          "-{broken",
          "+{",
          "+  \"version\": 1,",
          "+  \"packages\": [",
          "+    \"fd\",",
          "+    \"git\",",
          "+    \"ripgrep\"",
          "+  ]",
          "+}"
        ]
      }
    },
    "profiles": {
      "1000": {
        "after": {
          "active": 2,
          "dangling": [],
          "generations": [
            1,
            2
          ]
        },
        "before": {
          "active": 1,
          "dangling": [],
          "generations": [
            1
          ]
        }
      }
    }
  },
  "performed": [
    "PutFile /home/mix-user/.local/state/mix/state",
    "PutFile /home/mix-user/.local/state/mix/home.nix",
    "ActivateProfile mix-user's profile",
    "RecordState mix-user's package list",
    "Commit changes"
  ]
}
